--- a/10_nested-templates/04_preview/templates/index.gohtml
+++ b/10_nested-templates/04_preview/templates/index.gohtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Header Menu</title>
     <!-- we haven't learned to serve files yet ... -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="public/main.css">
 </head>
 <body>
 
@@ -23,5 +23,4 @@
 
 {{template "btf"}}
 
-</body>
-</html>
+{{template "footer"}}
