--- a/41_ajax/03/templates/bar.gohtml
+++ b/41_ajax/03/templates/bar.gohtml
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Session Example</title>
+    <title>BAR</title>
 </head>
 <body>
 
 <h1>Welcome to the bar. What can I get you to drink?</h1>
 
 {{if .First}}
-    USER NAME {{.UserName}}<br>
-    Password {{.Password}}<br>
-    FIRST {{.First}}<br>
-    LAST {{.Last}}<br>
-    <h2><a href="/logout">log out</a></h2>
+USER NAME {{.UserName}}<br>
+PASSWORD {{.Password}}<br>
+FIRST {{.First}}<br>
+LAST {{.Last}}<br>
+<h2><a href="/logout">log out</a></h2>
 {{end}}
 
 </body>
