--- a/41_ajax/03/templates/index.gohtml
+++ b/41_ajax/03/templates/index.gohtml
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Session Example</title>
+    <title>Document</title>
 </head>
 <body>
 
-<br>
 {{if .First}}
 USER NAME {{.UserName}}<br>
-Password {{.Password}}<br>
+PASSWORD {{.Password}}<br>
 FIRST {{.First}}<br>
 LAST {{.Last}}<br>
 <h2><a href="/logout">log out</a></h2>
@@ -20,5 +19,6 @@ LAST {{.Last}}<br>
 
 <br>
 <h2>Go to <a href="/bar">the bar</a></h2>
+
 </body>
 </html>
