--- a/41_ajax/03/templates/login.gohtml
+++ b/41_ajax/03/templates/login.gohtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Session Login</title>
+    <title>Document</title>
 </head>
 <body>
 
