--- a/41_ajax/03/templates/signup.gohtml
+++ b/41_ajax/03/templates/signup.gohtml
@@ -18,7 +18,7 @@
     <select name="role" id="sr">
         <option value="user">user</option>
         <option value="admin">admin</option>
-        <option value="007">spartan</option>
+        <option value="007">007</option>
     </select>
     <input type="submit" id="submitbutton">
 
